--- a/index.html
+++ b/index.html
@@ -44,12 +44,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <!--<li>-->
-                        <!--<a href="#about2">delete</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="#services">Services</a>-->
-                    <!--</li>-->
                     <li>
                         <a href="#about">About</a>
                     </li>
@@ -66,7 +60,7 @@
         <div class="headline">
             <div class="container">
                 <h1>One Page Wonder</h1>
-                <h2>Using the Database at the Toronto Star</h2>
+                <!--<h2>Using the Database at the Toronto Star</h2>-->
             </div>
         </div>
     </header>
@@ -101,8 +95,7 @@
         <!-- Third Featurette -->
         <div class="featurette" id="about">
             <!--<img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">-->
-            <h2 class="featurette-heading">The Third Heading
-                <span class="text-muted">Will Seal the Deal.</span>
+            <h2 class="featurette-heading">About
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
@@ -113,7 +106,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+
                 </div>
             </div>
         </footer>
