remove extraneous divs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Trump Lies Database</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -61,34 +61,13 @@
             <div class="container">
                 <h1>One Page Wonder</h1>
                 <!--<h2>Using the Database at the Toronto Star</h2>-->
+              <p></p>
             </div>
         </div>
     </header>
 
     <!-- Page Content -->
     <div class="container">
-
-        <hr class="featurette-divider">
-
-        <!-- First Featurette -->
-        <!--<div class="featurette" id="about1">-->
-            <!--&lt;!&ndash;<img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">&ndash;&gt;-->
-            <!--<h2 class="featurette-heading">This First Heading-->
-                <!--<span class="text-muted">Will Catch Your Eye</span>-->
-            <!--</h2>-->
-            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
-        <!--</div>-->
-
-        <hr class="featurette-divider">
-
-        <!-- Second Featurette -->
-        <!--<div class="featurette" id="services">-->
-            <!--<img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">-->
-            <!--<h2 class="featurette-heading">The Second Heading-->
-                <!--<span class="text-muted">Is Pretty Cool Too.</span>-->
-            <!--</h2>-->
-            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
-        <!--</div>-->
 
         <hr class="featurette-divider">
 
