--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Trump Lies Database</a>
+                <a class="navbar-brand" href="#database">Trump Lies Database</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -63,6 +63,7 @@
             <div class="container">
                 <!--<h1>False Statements</h1>-->
               <img src="https://www.thestar.com/content/dam/thestar/news/canada/2016/11/05/donald-trump-the-unauthorized-database-of-false-things/trump-falsehoods.jpg.size.custom.crop.1086x611.jpg">
+              <div id="database">&nbsp;<br></div>
               <h2 class="featurette-heading">False Statements</h2>
 
 
